--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="uk">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
 </head>
 
@@ -32,48 +32,63 @@
             <ul>
                 <li>
                     <h3>Увага до деталей</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <p>
+                        Ідейні міркування, і навіть початок повсякденної роботи з
+                        формування позиції.
+                    </p>
                 </li>
                 <li>
                     <h3>Пунктуальність</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <p>
+                        Завдання організації, особливо рамки і місце навчання кадрів тягне
+                        у себе.
+                    </p>
                 </li>
                 <li>
                     <h3>Планування</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <p>
+                        Так само консультація з широким активом значною мірою зумовлює.
+                    </p>
                 </li>
                 <li>
                     <h3>Сучасні технології</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <p>
+                        Значимість цих проблем настільки очевидна, що реалізація планових
+                        завдань.
+                    </p>
                 </li>
             </ul>
         </section>
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><img src="./img/first.jpg" alt="first photo" width="270"></li>
-                <li><img src="./img/second.jpg" alt="second photo" width="270"></li>
-                <li><img src="./img/third.jpg" alt="third photo" width="270"></li>
+                <li><img src="./img/first.jpg" alt="first photo" width="270" /></li>
+                <li><img src="./img/second.jpg" alt="second photo" width="270" /></li>
+                <li><img src="./img/third.jpg" alt="third photo" width="270" /></li>
             </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="./img/team1.jpg" alt="team1 photo" width="270">
-                <h3>Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
+                <li>
+                    <img src="./img/team1.jpg" alt="team1 photo" width="270" />
+                    <h3>Ігор Дем'яненко</h3>
+                    <p>Product Designer</p>
                 </li>
-                <li><img src="./img/team2.jpg" alt="team2 photo" width="270">
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <li>
+                    <img src="./img/team2.jpg" alt="team2 photo" width="270" />
+                    <h3>Ольга Рєпіна</h3>
+                    <p>Frontend Developer</p>
                 </li>
-                <li><img src="./img/team3.jpg" alt="team3 photo" width="270">
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
+                <li>
+                    <img src="./img/team3.jpg" alt="team3 photo" width="270" />
+                    <h3>Микола Тарасов</h3>
+                    <p>Marketing</p>
                 </li>
-                <li><img src="./img/team4.jpg" alt="team4 photo" width="270">
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+                <li>
+                    <img src="./img/team4.jpg" alt="team4 photo" width="270" />
+                    <h3>Михайло Єрмаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -94,7 +109,6 @@
                 </li>
             </ul>
         </address>
-
     </footer>
 </body>
 
