--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             <h1>Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
+        <!--Benefits section-->
         <section>
-            <h2>Наші переваги</h2>
+            <h2 hidden>Наші переваги</h2>
             <ul>
                 <li>
                     <h3>Увага до деталей</h3>
@@ -59,6 +60,7 @@
                 </li>
             </ul>
         </section>
+        <!--What we can section-->
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
@@ -67,6 +69,7 @@
                 <li><img src="./img/third.jpg" alt="third photo" width="270" /></li>
             </ul>
         </section>
+        <!--Team section-->
         <section>
             <h2>Наша команда</h2>
             <ul>
@@ -93,6 +96,7 @@
             </ul>
         </section>
     </main>
+    <!--Contacts-->
     <footer>
         <a href="/index.html" lang="en"> WebStudio</a>
         <address>
