--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 
 <body>
     <header>
-        <a href="/index.html" lang="en"> WebStudio</a>
         <nav>
+            <a href="/index.html" lang="en"> WebStudio</a>
             <ul>
                 <li><a href="">Студія</a></li>
                 <li><a href="">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>      
     </header>
     <main>
         <!--Hero section-->
